// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup renders correctly renders correctly with counter 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer medium light"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="l3-style-counter l3-style-counter--size-large l3-style-counter--kind-fill l3-style-counter--color-light"
      >
        <span
          id="counter-"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with counter ariaLabel default-tooltip 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          aria-label="Person 1"
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer medium light"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="l3-style-counter l3-style-counter--size-large l3-style-counter--kind-fill l3-style-counter--color-light"
      >
        <span
          id="counter-"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with counter default-tooltip 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer medium light"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="l3-style-counter l3-style-counter--size-large l3-style-counter--kind-fill l3-style-counter--color-light"
      >
        <span
          id="counter-"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with custom counter tooltip 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer medium light"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="l3-style-counter l3-style-counter--size-large l3-style-counter--kind-fill l3-style-counter--color-light"
      >
        <span
          id="counter-"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with custom counter value 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with dummy class name 1`] = `
<div
  className="avatarGroupContainer dummy-class-name"
>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with large size 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer large light"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="l3-style-counter l3-style-counter--size-large l3-style-counter--kind-fill l3-style-counter--color-light"
      >
        <span
          id="counter-"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly without counter 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className="l3-style-avatar avatarContainer l3-style-avatar--large"
    style={Object {}}
  >
    <div
      className="l3-style-clickable l3-style-avatar_clickableWrapper l3-style-clickable--disable-text-selection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        aria-hidden={false}
        className="l3-style-avatar_circle l3-style-avatar_circle--text"
        style={
          Object {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="l3-style-avatar-content_text l3-style-avatar-content_text--large"
        >
          P2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarGroup renders correctly with empty props 1`] = `null`;
